[gd_scene load_steps=9 format=3 uid="uid://yla6sy48d65a"]

[ext_resource type="Script" path="res://Scripts/Menu/main_menu.gd" id="1_fjd45"]
[ext_resource type="FontFile" uid="uid://b8jnfyycrm7fw" path="res://Assets/Fonts/Extra Days.ttf" id="2_5mrn7"]
[ext_resource type="Script" path="res://Scripts/Menu/parallax_background.gd" id="3_v6c31"]
[ext_resource type="Texture2D" uid="uid://cpgum618cn8ob" path="res://Assets/Images/Background/background.png" id="4_8arns"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wg0rx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_62fdh"]
bg_color = Color(0.783535, 0.645886, 0.434061, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vsqni"]
bg_color = Color(0.632887, 0.506738, 0.309443, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_agkb2"]
bg_color = Color(0.917218, 0.823696, 0.68446, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 5

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fjd45")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.0
offset_top = -30.0
offset_right = 121.0
offset_bottom = 236.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_wg0rx")
theme_override_styles/hover = SubResource("StyleBoxFlat_62fdh")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vsqni")
theme_override_styles/normal = SubResource("StyleBoxFlat_agkb2")
text = "New Game"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_wg0rx")
theme_override_styles/hover = SubResource("StyleBoxFlat_62fdh")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vsqni")
theme_override_styles/normal = SubResource("StyleBoxFlat_agkb2")
text = "Continue"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_wg0rx")
theme_override_styles/hover = SubResource("StyleBoxFlat_62fdh")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vsqni")
theme_override_styles/normal = SubResource("StyleBoxFlat_agkb2")
text = "Options"

[node name="Button4" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_wg0rx")
theme_override_styles/hover = SubResource("StyleBoxFlat_62fdh")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vsqni")
theme_override_styles/normal = SubResource("StyleBoxFlat_agkb2")
text = "Quit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -365.0
offset_top = 67.0
offset_right = 348.0
offset_bottom = 155.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_5mrn7")
theme_override_font_sizes/font_size = 73
text = "Godot Adventure"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("3_v6c31")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(800, 600)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(-1, -1)
texture = ExtResource("4_8arns")
centered = false

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Button4" to="." method="_on_quit_pressed"]
